# Exely_MCP

./: .dockerignore  .env.example  Dockerfile  README.md  README.ru.md  deploy.ps1  deploy.sh  docker-compose.bot.yml  docker-compose.server.yml  docker-compose.yml  pyproject.toml  telegram_bot.py
app/: config.py  main.py
app/exely_client/: client.py  schemas.py
app/llm_client/: llm_client.py
app/mcp_tools/: prompt_utils.py  schemas_llm.py  tools.py
