[project]
name = "exely_mcp_project"
version = "0.1.0"
description = "MCP Server for Exely Hotel Booking API"
authors = [
    {name = "Denis Chunarev", email = "bdata0ds@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.3",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "httpx>=0.28.1",
    "mistralai>=1.8.1",
    "fastmcp>=2.8.0",
    "python-dotenv>=1.1.0",
    "pytelegrambotapi>=4.27.0",
]
requires-python = ">=3.11"

#[tool.uv.sources]
#fastmcp = { git = "https://github.com/jlowin/fastmcp.git", rev="v2.6.1" }

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "UP", "C90", "Q"]
ignore = ["E501"] # Игнорируем слишком длинные строки, если автоформатирование не справляется


[tool.pdm] # Если используете PDM
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
